# terminus

./: .gitignore  ARCHITECTURE_v1.md  CONFIG_SCHEMA_v1.md  Cargo.toml  PRD_v1.md  README.md
.github/workflows/: build-multi-os.yml
apps/terminus-cli/: Cargo.toml
apps/terminus-cli/src/: main.rs
apps/terminus-tauri/: ROADMAP.md  generate-icons.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/terminus-tauri/scripts/: make-macos-pkg.mjs  postprocess-dmg.mjs  tauri-dev-safe.mjs  tauri-proxy.mjs
apps/terminus-tauri/src/: main.ts
apps/terminus-tauri/src-tauri/: Cargo.toml  generate-icons.js  tauri.conf.json
apps/terminus-tauri/src-tauri/capabilities/: default.json
apps/terminus-tauri/src-tauri/icons/: icon.icns
apps/terminus-tauri/src-tauri/src/: lib.rs  main.rs
apps/terminus-tauri/src-tauri/src/commands/: ask.rs  browser.rs  explorer.rs  files.rs  git.rs  host_tools.rs  mod.rs  monitoring.rs  projects.rs  pty.rs  system_info.rs
apps/terminus-tauri/src/activity/: ActivityPanel.ts  activity.css
apps/terminus-tauri/src/browser/: BrowserPane.ts  browser.css
apps/terminus-tauri/src/explorer/: Explorer.ts  explorer.css
apps/terminus-tauri/src/extensions/: ExtensionsPanel.ts  extensions.css
apps/terminus-tauri/src/git/: GitPanel.ts  git.css
apps/terminus-tauri/src/inspector/: InspectorPane.ts  inspector.css
apps/terminus-tauri/src/ipc/: bridge.ts
apps/terminus-tauri/src/shell/: Shell.ts  (+3 more)
crates/terminus-core/: Cargo.toml
crates/terminus-core/src/: cache.rs  config.rs  gitops.rs  lib.rs  monitoring.rs  policies.rs  provider.rs  runtime.rs  state.rs  types.rs
examples/: app-config.yaml  project-config.terminus.yaml
(+18 files in other folders)
