[workspace]
members = [
  "apps/terminus-cli",
  "apps/terminus-tauri/src-tauri",
  "crates/terminus-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Terminus Team"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
