[package]
name = "terminus-tauri"
version = "0.1.0"
edition = "2024"
description = "Terminus Desktop Shell"
authors = ["Terminus Team"]
license = "MIT"

[lib]
name = "terminus_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "terminus-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
terminus-core = { path = "../../../crates/terminus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
portable-pty = "0.8"
sysinfo = "0.30"
